--- a/bid/templates/bid/index.html
+++ b/bid/templates/bid/index.html
@@ -1,5 +1,5 @@
 {% extends 'main/__base.html' %}
-{% block subtitle %} | Bids {% endblock %}
+{% block subtitle %} | Opportunities {% endblock %}
 {% load static %}
 {% block styles %}
 <link rel="stylesheet" href="{% static 'main/css/dashboard.css' %}">
