--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -33,9 +33,8 @@
                 </p>
                 <div class="quick_link_container">
                     <a href="{% url 'main:dashboard' %}">View the Dashboard</a>
-                    <a href="">View Projects</a>
-                    <a href="">View Something</a>
-                    <a href="">View Something</a>
+                    <a href="{% url 'bid:index' %}">View All Opportunities</a>
+                    <a href="{% url 'projects:add_project' %}">Add a Project</a>
                 </div>
             </div>
             <div class="bottom">
