--- a/bid/templates/bid/bid_details_material.html
+++ b/bid/templates/bid/bid_details_material.html
@@ -158,7 +158,7 @@
                     </h2>
                 </th>
             </tr>
-            <tr>
+            <tr class="existing_material_headers">
                 <th>
                     Qty.
                 </th>
@@ -172,7 +172,7 @@
                     MFR #
                 </th>
                 <th>
-                    Unit Price
+                    Price
                 </th>
                 <th>
                     UOM
@@ -190,7 +190,7 @@
         </thead>
         <tbody>
             {% for bid_material in bid_materials %}
-            <tr>
+            <tr class="existing_materials_details">
                 <td>
                     {{ bid_material.quantity|floatformat:0 }}
                 </td>
@@ -204,14 +204,13 @@
                     {{ bid_material.material_id|get_manufacturer_number }}
                 </td>
                 <td>
-                    {{ bid_material.unit_price|floatformat:2 }}
+                    $ {{ bid_material.unit_price|floatformat:2 }}
                 </td>
                 <td>
-                    {{ bid_material.unit_of_measure|format_unit_of_measure }}
+                    {{ bid_material.unit_of_measure }}
                 </td>
                 <td>
-
-
+                    $ {{ bid_material.quantity|multiply:bid_material.unit_price|floatformat:2 }}
                 </td>
                 <td>
                     <a href="">Edit</a>
@@ -221,6 +220,31 @@
                 </td>
             </tr>
             {% endfor %}
+            <tr>
+                <hr>
+            </tr>
+            <tr>
+                <td>
+                    &nbsp;
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+                <td class="total">
+                    <strong>TOTAL</strong>
+                <td class="total">
+                    <strong>$ {{ total_cost|floatformat:2 }}</strong>
+                </td>
+            </tr>
         </tbody>
     </table>
 
