--- a/static/projects/css/projects.css
+++ b/static/projects/css/projects.css
@@ -1,25 +1,39 @@
 @charset "utf-8";
 
+.add_new_container {
+    width: 100%;
+    padding: 10px;
+}
+
 .project_container {
     border: 1px solid #ddd;
     text-transform: uppercase;
+    width: 100%;
 }
 
 #add_project_table {
     width: 100%;
     height: 100%;
     text-transform: uppercase;
-
 }
 
 #add_project_table label {
     margin-left: 10px;
 }
 
-#add_project_table tbody {
-    margin: 0 auto;
+#add_project_table h2 {
+    text-align: center;
+    margin: 10px 0;
 }
 
+#add_project_table input[type='text'],
+#add_project_table input[type='date'],
+#add_project_table select {
+    font-family: 'Roboto Condensed', sans-serif;
+    padding: 5px;
+    border: 1px solid #ccc;
+    text-transform: uppercase;
+}
 
 .multiple_selections {
     width: 100%;
@@ -53,8 +67,8 @@
     margin-bottom: 5px;
 }
 
-.project_sites_label input,
-.project_contacts_label input {
+.project_sites_label input[type='text'],
+.project_contacts_label input[type='text'] {
     width: 100%;
     margin-bottom: 5px;
     border: 1px solid #ccc;
@@ -70,7 +84,106 @@
     padding: 10px;
 }
 
-
 .multiple_select div {
     padding: 3px;
+}
+
+.add_project_button_container {
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
+}
+
+#save_project_button {
+    width: 50%;
+    margin: 0 auto;
+    border: none;
+    outline: none;
+    padding: 5px;
+    text-transform: uppercase;
+    background-color: #ddd;
+    cursor: pointer;
+}
+
+#save_project_button:hover {
+    background-color: #ccc;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: all 0.5s ease;
+    box-shadow: 0 0 2px #ccc;
+}
+
+#customer_contact_form,
+#new_site_form {
+    /* border: 1px solid greenyellow; */
+    width: 100%;
+    text-transform: uppercase;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+#customer_contact_form select,
+#new_site_form select,
+#customer_contact_form input[type='text'],
+#new_site_form input[type='text'],
+#customer_contact_form input[type='email'],
+#new_site_form input[type='number'] {
+    border: 1px solid #ccc;
+    padding: 5px;
+    text-transform: uppercase;
+}
+
+#customer_contact_form small,
+#new_site_form small {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.customer_contact_entry,
+.site_entry {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    margin: 2px 0;
+    background-color: #ddd;
+    box-shadow: 0 0 2px #ccc;
+}
+
+.customer_form_buttons,
+.site_form_buttons {
+    width: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 5px 20px;
+    margin: 2px auto;
+}
+
+.customer_form_buttons button,
+.site_form_buttons button,
+.customer_form_buttons input[type='submit'],
+.site_form_buttons input[type='submit'] {
+    width: 100%;
+    margin: 5px;
+    border: none;
+    outline: none;
+    padding: 5px;
+    text-transform: uppercase;
+    background-color: #ddd;
+    cursor: pointer;
+}
+
+.customer_form_buttons button:hover,
+.site_form_buttons button:hover,
+.customer_form_buttons input:hover,
+.site_form_buttons input:hover {
+    background-color: #ccc;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: all 0.5s ease;
+    box-shadow: 0 0 2px #ccc;
 }
